submit pilots when no activated jobs, otherwise panda will not schedule jobs

--- a/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
@@ -295,7 +295,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 8,
 	  "activateWorkerFactor": 0.125,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
 	  "ceQueueName": "rubin",
 	  "ceARCGridType": "arc",
@@ -324,7 +324,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 8,
           "activateWorkerFactor": 0.125,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "rubin",
           "ceARCGridType": "arc",
@@ -354,7 +354,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 4,
           "activateWorkerFactor": 0.25,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "rubin",
           "ceARCGridType": "arc",
@@ -384,7 +384,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 2,
           "activateWorkerFactor": 0.5,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "rubin_himem",
           "ceARCGridType": "arc",
@@ -414,7 +414,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 1,
           "activateWorkerFactor": 1.0,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "rubin_himem",
           "ceARCGridType": "arc",
@@ -498,7 +498,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 8,
           "activateWorkerFactor": 0.125,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
 	  "ceHostname": "sdfarcce001.slac.stanford.edu",
@@ -526,7 +526,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 8,
           "activateWorkerFactor": 0.125,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -555,7 +555,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 4,
           "activateWorkerFactor": 0.25,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -584,7 +584,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 2,
           "activateWorkerFactor": 0.5,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -613,7 +613,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 1,
           "activateWorkerFactor": 1.0,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -694,7 +694,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 8,
           "activateWorkerFactor": 0.125,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
 	  "ceQueueName": "grid",
           "ceARCGridType": "arc",
           "ceHostname": "grendel2.hec.lancs.ac.uk",
@@ -722,7 +722,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 8,
           "activateWorkerFactor": 0.125,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
@@ -751,7 +751,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 4,
           "activateWorkerFactor": 0.25,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
@@ -780,7 +780,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 2,
           "activateWorkerFactor": 0.5,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
@@ -809,7 +809,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 1,
           "activateWorkerFactor": 1.0,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
