--- a/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
@@ -293,7 +293,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 8,
           "activateWorkerFactor": 0.125,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
 	  "ceQueueName": "rubin",
 	  "ceARCGridType": "arc",
@@ -322,7 +322,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 8,
           "activateWorkerFactor": 0.125,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "rubin",
           "ceARCGridType": "arc",
@@ -352,7 +352,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 4,
           "activateWorkerFactor": 0.25,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "rubin",
           "ceARCGridType": "arc",
@@ -382,7 +382,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 2,
           "activateWorkerFactor": 0.5,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "rubin_himem",
           "ceARCGridType": "arc",
@@ -412,7 +412,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 1,
           "activateWorkerFactor": 1.0,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "rubin_himem",
           "ceARCGridType": "arc",
@@ -496,7 +496,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 8,
           "activateWorkerFactor": 0.125,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
 	  "ceHostname": "ccarccelsst01.in2p3.fr",
@@ -524,7 +524,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 8,
           "activateWorkerFactor": 0.125,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -553,7 +553,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 4,
           "activateWorkerFactor": 0.25,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -582,7 +582,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 2,
           "activateWorkerFactor": 0.5,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -611,7 +611,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 1,
           "activateWorkerFactor": 1.0,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
@@ -692,7 +692,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 8,
           "activateWorkerFactor": 0.125,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
 	  "ceQueueName": "grid",
           "ceARCGridType": "arc",
           "ceHostname": "grendel2.hec.lancs.ac.uk",
@@ -720,7 +720,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 8,
           "activateWorkerFactor": 0.125,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
@@ -749,7 +749,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 4,
           "activateWorkerFactor": 0.25,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
@@ -778,7 +778,7 @@
           "nCorePerNode": 1,
 	  "nCoreFactor": 2,
           "activateWorkerFactor": 0.5,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
@@ -807,7 +807,7 @@
           "nCorePerNode": 1,
           "nCoreFactor": 1,
           "activateWorkerFactor": 1.0,
-	  "noPilotsWhenNoActiveJobs": true,
+	  "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "grid",
           "ceARCGridType": "arc",
