--- a/helm/panda/charts/server/templates/statefulset.yaml
+++ b/helm/panda/charts/server/templates/statefulset.yaml
@@ -127,6 +127,13 @@ spec:
             # set no_proxy since $() is resolved not in envFrom section
             - name: no_proxy
               value: $(no_proxy),$(PANDA_IDDS_HOST)
+          readinessProbe:
+            exec:
+              command:
+              - cat
+              - /tmp/panda_server_start.log
+            initialDelaySeconds: 5
+            periodSeconds: 10
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
