--- a/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
@@ -61,6 +61,13 @@
     "sweeper": {
       "name": "HTCondorSweeper",
       "module": "pandaharvester.harvestersweeper.htcondor_sweeper"
+    },
+    "throttler": {
+      "name": "TinyThrottler",
+      "module": "pandaharvester.harvesterthrottler.tiny_throttler",
+      "logicType": "OR",
+      "rulesForMissed": [{"level": "site", "timeWindow": 10, "maxMissed": 50}],
+      "rulesForSiteSubmittedRunning":[{"level": "cores", "maxCores": 1000}]
     }
   },
 
@@ -128,6 +135,13 @@
     "sweeper": {
       "name": "HTCondorSweeper",
       "module": "pandaharvester.harvestersweeper.htcondor_sweeper"
+    },
+    "throttler": {
+      "name": "TinyThrottler",
+      "module": "pandaharvester.harvesterthrottler.tiny_throttler",
+      "logicType": "OR",
+      "rulesForMissed": [{"level": "site", "timeWindow": 10, "maxMissed": 50}],
+      "rulesForSiteSubmittedRunning":[{"level": "cores", "maxCores": 1000}]
     }
   },
 
@@ -276,6 +290,7 @@
 
   "SLAC_TEST": {
       "queueStatus": "online",
+      "siteName": "SLAC",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
@@ -305,6 +320,7 @@
 
   "SLAC_Rubin": {
     "queueStatus": "online",
+    "siteName": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -335,6 +351,7 @@
 
   "SLAC_Rubin_Medium": {
     "queueStatus": "online",
+    "siteName": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -365,6 +382,7 @@
 
   "SLAC_Rubin_Himem": {
     "queueStatus": "online",
+    "siteName": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -395,6 +413,7 @@
 
   "SLAC_Rubin_Big_Himem": {
     "queueStatus": "online",
+    "siteName": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -425,6 +444,7 @@
 
   "SLAC_Rubin_Extra_Himem": {
     "queueStatus": "online",
+    "siteName": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
@@ -452,6 +472,7 @@
 
   "SLAC_Rubin_Merge": {
     "queueStatus": "online",
+    "siteName": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
@@ -479,6 +500,7 @@
 
   "CC-IN2P3_TEST": {
       "queueStatus": "online",
+      "siteName": "CC-IN2P3",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
@@ -507,6 +529,7 @@
 
   "CC-IN2P3_Rubin": {
       "queueStatus": "online",
+      "siteName": "CC-IN2P3",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
@@ -536,6 +559,7 @@
 
   "CC-IN2P3_Rubin_Medium": {
     "queueStatus": "online",
+    "siteName": "CC-IN2P3",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -565,6 +589,7 @@
 
   "CC-IN2P3_Rubin_Himem": {
     "queueStatus": "online",
+    "siteName": "CC-IN2P3",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -594,6 +619,7 @@
 
   "CC-IN2P3_Rubin_Big_Himem": {
     "queueStatus": "online",
+    "siteName": "CC-IN2P3",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -623,6 +649,7 @@
 
   "CC-IN2P3_Rubin_Extra_Himem": {
     "queueStatus": "online",
+    "siteName": "CC-IN2P3",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
@@ -649,6 +676,7 @@
 
   "CC-IN2P3_Rubin_Merge": {
     "queueStatus": "online",
+    "siteName": "CC-IN2P3",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
@@ -675,6 +703,7 @@
 
   "LANCS_TEST": {
       "queueStatus": "online",
+      "siteName": "LANCS",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
@@ -703,6 +732,7 @@
 
   "LANCS_Rubin": {
       "queueStatus": "online",
+      "siteName": "LANCS",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
@@ -732,6 +762,7 @@
 
   "LANCS_Rubin_Medium": {
     "queueStatus": "online",
+    "siteName": "LANCS",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -761,6 +792,7 @@
 
   "LANCS_Rubin_Himem": {
     "queueStatus": "online",
+    "siteName": "LANCS",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -790,6 +822,7 @@
 
   "LANCS_Rubin_Big_Himem": {
     "queueStatus": "online",
+    "siteName": "LANCS",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -819,6 +852,7 @@
 
   "LANCS_Rubin_Extra_Himem": {
     "queueStatus": "online",
+    "siteName": "LANCS",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
@@ -845,6 +879,7 @@
 
   "LANCS_Rubin_Merge": {
     "queueStatus": "online",
+    "siteName": "LANCS",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
