--- a/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
@@ -292,7 +292,7 @@
 
   "SLAC_TEST": {
       "queueStatus": "online",
-      "siteName": "SLAC",
+      "site": "SLAC",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
@@ -322,7 +322,7 @@
 
   "SLAC_Rubin": {
     "queueStatus": "online",
-    "siteName": "SLAC",
+    "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -353,7 +353,7 @@
 
   "SLAC_Rubin_Medium": {
     "queueStatus": "online",
-    "siteName": "SLAC",
+    "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -384,7 +384,7 @@
 
   "SLAC_Rubin_Himem": {
     "queueStatus": "online",
-    "siteName": "SLAC",
+    "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -415,7 +415,7 @@
 
   "SLAC_Rubin_Big_Himem": {
     "queueStatus": "online",
-    "siteName": "SLAC",
+    "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -446,7 +446,7 @@
 
   "SLAC_Rubin_Extra_Himem": {
     "queueStatus": "online",
-    "siteName": "SLAC",
+    "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
@@ -474,7 +474,7 @@
 
   "SLAC_Rubin_Merge": {
     "queueStatus": "online",
-    "siteName": "SLAC",
+    "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
@@ -502,7 +502,7 @@
 
   "CC-IN2P3_TEST": {
       "queueStatus": "online",
-      "siteName": "CC-IN2P3",
+      "site": "CC-IN2P3",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
@@ -531,7 +531,7 @@
 
   "CC-IN2P3_Rubin": {
       "queueStatus": "online",
-      "siteName": "CC-IN2P3",
+      "site": "CC-IN2P3",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
@@ -561,7 +561,7 @@
 
   "CC-IN2P3_Rubin_Medium": {
     "queueStatus": "online",
-    "siteName": "CC-IN2P3",
+    "site": "CC-IN2P3",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -591,7 +591,7 @@
 
   "CC-IN2P3_Rubin_Himem": {
     "queueStatus": "online",
-    "siteName": "CC-IN2P3",
+    "site": "CC-IN2P3",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -621,7 +621,7 @@
 
   "CC-IN2P3_Rubin_Big_Himem": {
     "queueStatus": "online",
-    "siteName": "CC-IN2P3",
+    "site": "CC-IN2P3",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -651,7 +651,7 @@
 
   "CC-IN2P3_Rubin_Extra_Himem": {
     "queueStatus": "online",
-    "siteName": "CC-IN2P3",
+    "site": "CC-IN2P3",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
@@ -678,7 +678,7 @@
 
   "CC-IN2P3_Rubin_Merge": {
     "queueStatus": "online",
-    "siteName": "CC-IN2P3",
+    "site": "CC-IN2P3",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
@@ -705,7 +705,7 @@
 
   "LANCS_TEST": {
       "queueStatus": "online",
-      "siteName": "LANCS",
+      "site": "LANCS",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
@@ -734,7 +734,7 @@
 
   "LANCS_Rubin": {
       "queueStatus": "online",
-      "siteName": "LANCS",
+      "site": "LANCS",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
@@ -764,7 +764,7 @@
 
   "LANCS_Rubin_Medium": {
     "queueStatus": "online",
-    "siteName": "LANCS",
+    "site": "LANCS",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -794,7 +794,7 @@
 
   "LANCS_Rubin_Himem": {
     "queueStatus": "online",
-    "siteName": "LANCS",
+    "site": "LANCS",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -824,7 +824,7 @@
 
   "LANCS_Rubin_Big_Himem": {
     "queueStatus": "online",
-    "siteName": "LANCS",
+    "site": "LANCS",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -854,7 +854,7 @@
 
   "LANCS_Rubin_Extra_Himem": {
     "queueStatus": "online",
-    "siteName": "LANCS",
+    "site": "LANCS",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
@@ -881,7 +881,7 @@
 
   "LANCS_Rubin_Merge": {
     "queueStatus": "online",
-    "siteName": "LANCS",
+    "site": "LANCS",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
