--- a/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
@@ -290,7 +290,7 @@
 
   "SLAC_TEST": {
       "queueStatus": "online",
-      "siteName": "SLAC",
+      "site": "SLAC",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
@@ -320,7 +320,7 @@
 
   "SLAC_Rubin": {
     "queueStatus": "online",
-    "siteName": "SLAC",
+    "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -351,7 +351,7 @@
 
   "SLAC_Rubin_Medium": {
     "queueStatus": "online",
-    "siteName": "SLAC",
+    "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -382,7 +382,7 @@
 
   "SLAC_Rubin_Himem": {
     "queueStatus": "online",
-    "siteName": "SLAC",
+    "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -413,7 +413,7 @@
 
   "SLAC_Rubin_Big_Himem": {
     "queueStatus": "online",
-    "siteName": "SLAC",
+    "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -444,7 +444,7 @@
 
   "SLAC_Rubin_Extra_Himem": {
     "queueStatus": "online",
-    "siteName": "SLAC",
+    "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
@@ -472,7 +472,7 @@
 
   "SLAC_Rubin_Merge": {
     "queueStatus": "online",
-    "siteName": "SLAC",
+    "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
@@ -500,7 +500,7 @@
 
   "CC-IN2P3_TEST": {
       "queueStatus": "online",
-      "siteName": "CC-IN2P3",
+      "site": "CC-IN2P3",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
@@ -529,7 +529,7 @@
 
   "CC-IN2P3_Rubin": {
       "queueStatus": "online",
-      "siteName": "CC-IN2P3",
+      "site": "CC-IN2P3",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
@@ -559,7 +559,7 @@
 
   "CC-IN2P3_Rubin_Medium": {
     "queueStatus": "online",
-    "siteName": "CC-IN2P3",
+    "site": "CC-IN2P3",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -589,7 +589,7 @@
 
   "CC-IN2P3_Rubin_Himem": {
     "queueStatus": "online",
-    "siteName": "CC-IN2P3",
+    "site": "CC-IN2P3",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -619,7 +619,7 @@
 
   "CC-IN2P3_Rubin_Big_Himem": {
     "queueStatus": "online",
-    "siteName": "CC-IN2P3",
+    "site": "CC-IN2P3",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -649,7 +649,7 @@
 
   "CC-IN2P3_Rubin_Extra_Himem": {
     "queueStatus": "online",
-    "siteName": "CC-IN2P3",
+    "site": "CC-IN2P3",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
@@ -676,7 +676,7 @@
 
   "CC-IN2P3_Rubin_Merge": {
     "queueStatus": "online",
-    "siteName": "CC-IN2P3",
+    "site": "CC-IN2P3",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
@@ -703,7 +703,7 @@
 
   "LANCS_TEST": {
       "queueStatus": "online",
-      "siteName": "LANCS",
+      "site": "LANCS",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
@@ -732,7 +732,7 @@
 
   "LANCS_Rubin": {
       "queueStatus": "online",
-      "siteName": "LANCS",
+      "site": "LANCS",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.pull",
@@ -762,7 +762,7 @@
 
   "LANCS_Rubin_Medium": {
     "queueStatus": "online",
-    "siteName": "LANCS",
+    "site": "LANCS",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -792,7 +792,7 @@
 
   "LANCS_Rubin_Himem": {
     "queueStatus": "online",
-    "siteName": "LANCS",
+    "site": "LANCS",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -822,7 +822,7 @@
 
   "LANCS_Rubin_Big_Himem": {
     "queueStatus": "online",
-    "siteName": "LANCS",
+    "site": "LANCS",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -852,7 +852,7 @@
 
   "LANCS_Rubin_Extra_Himem": {
     "queueStatus": "online",
-    "siteName": "LANCS",
+    "site": "LANCS",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
@@ -879,7 +879,7 @@
 
   "LANCS_Rubin_Merge": {
     "queueStatus": "online",
-    "siteName": "LANCS",
+    "site": "LANCS",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
