--- a/helm/panda/charts/server/panda_server_config.json
+++ b/helm/panda/charts/server/panda_server_config.json
@@ -27,6 +27,7 @@
         "mq_configFile_1": "/opt/panda/etc/panda/panda_mbproxy_config.json"
     },
     "daemon": {
-        "enable": "True"
+        "enable": "True",
+	"n_proc": 18
     }
 }
