--- a/helm/panda/charts/jedi/panda_jedi_config.json
+++ b/helm/panda/charts/jedi/panda_jedi_config.json
@@ -13,22 +13,22 @@
         "voWithScope": "wlcg"
     },
     "confeeder": {
-        "nWorkers": 6
+        "nWorkers": "6"
     },
     "taskrefine": {
-        "nWorkers": 3
+        "nWorkers": "3"
     },
     "jobgen": {
-        "nWorkers": 6
+        "nWorkers": "6"
     },
     "postprocessor": {
-        "nWorkers": 6
+        "nWorkers": "6"
     },
     "taskbroker": {
-        "nWorkers": 3
+        "nWorkers": "3"
     },
     "tcommando": {
-        "nWorkers": 6
+        "nWorkers": "6"
     },
     "tasksetup": {
         "modConfig": "wlcg:any:pandajedi.jedisetup.SimpleTaskSetupper:SimpleTaskSetupper"
