increase db workers

--- a/helm/panda/charts/jedi/panda_jedi_config.json
+++ b/helm/panda/charts/jedi/panda_jedi_config.json
@@ -5,7 +5,8 @@
         "dbport": "$PANDA_DB_PORT",
         "dbpasswd": "$PANDA_DB_PASSWORD",
 	"dbuser": "$PANDA_DB_USER",
-	"dbname": "$PANDA_DB_NAME"
+	"dbname": "$PANDA_DB_NAME",
+	"nWorkers": "10"
     },
     "ddm": {
         "modConfig": "wlcg:4:pandajedi.jediddm.GenDDMClient:GenDDMClient::off,wlcg:2:pandajedi.jediddm.AtlasDDMClient:AtlasDDMClient:sphenix",
