update idds cache expire time

--- a/helm/idds/charts/rest/idds_configmap.json
+++ b/helm/idds/charts/rest/idds_configmap.json
@@ -10,6 +10,8 @@
              "echo": 0,
              "pool_reset_on_return": "rollback"
             },
+	 "clerk":
+	    {"cache_expire_seconds": 120},
 	 "carrier":
 	    {"receiver_num_threads": 16,
 	     "plugin.receiver": "idds.agents.common.plugins.messaging.MessagingReceiver",
